syntax = "proto3";

package com.road.yishi.proto.active;

message SevenTaskMsg {
  int32 taskId = 1;
  int32 taskType = 2;
  int32 status = 3;
  int32 finishNum = 4;
}
